# zeton_django

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  manage.py  pre-commit-output.txt  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: dependabot.yml
env_config/: local.env
fixtures/: caregivers.json  points.json  prizes.json  roles.json  students.json  tasks.json  users.json
scripts/: get_token.py  get_zeton_token.sh
tests/: common.py  conftest.py  test_current_user.py  test_point.py  test_points.py  test_prizes.py  test_students.py  test_students_points_get.py  test_students_points_post.py  test_task_post.py  test_tasks.py  test_token_auth.py
tests/users/: test_points.py
users/: admin.py  models.py  permissions.py  points_urls.py  pytest.ini  resources.py  serializers.py  urls.py  views.py
users/fixtures/: caregivers.json
users/migrations/: 0001_initial.py  0002_auto_20221031_2300.py  0002_caregiver_point_student.py  0003_alter_caregiver_id_alter_customuser_id_and_more.py  0003_prize.py  0004_alter_point_table_alter_prize_table_alter_role_table_and_more.py  0004_auto_20201009_0818.py  0005_rename_assignee_point_student.py  0005_task.py  0006_auto_20210130_1158.py  0006_point_content_type_point_object_id_point_points_type_and_more.py  0007_student_caregivers.py  0008_auto_20210920_2219.py
utils/: conversion.py
zeton_backend/: asgi.py  pagination.py  settings.py  settings_dev.py  settings_prod.py  urls.py  utils.py  wsgi.py
zeton_django/: manage.py
(+5 files in other folders)
